<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8FF">
    <include layout="@layout/app_bar_data_entry_menu"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
android:layout_marginRight="10dp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:gravity="right"
android:layout_weight="3"
                    android:id="@+id/sequence"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Sequence"
                    android:layout_marginTop="10dp"
                    android:textStyle="normal"
                    android:textSize="20dp"
                    android:textColor="#000000"/>
                <TextView
android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Sequence"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#000000"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">
                <TextView
                    android:gravity="right"
                    android:layout_weight="3"
                    android:id="@+id/partcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Sequence"
                    android:layout_marginTop="10dp"
                    android:textStyle="normal"
                    android:textSize="20dp"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/partcode"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#000000"/>

            </LinearLayout>
            <LinearLayout
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">
                <TextView
                    android:gravity="right"
                    android:layout_weight="3"
                    android:id="@+id/parttitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Sequence"
                    android:layout_marginTop="10dp"
                    android:textStyle="normal"
                    android:textSize="20dp"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/parttitle"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#000000"/>

            </LinearLayout>
            <LinearLayout
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <Spinner
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="@string/Sequence"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="50dp"
                    android:textStyle="normal"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:id="@+id/lcS"
                    />
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Lotcode"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#000000"/>

            </LinearLayout>
            <LinearLayout
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <Spinner
                    android:layout_weight="3"
                    android:id="@+id/ScL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Sequence"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="50dp"
                    android:textStyle="normal"
                    android:textSize="20dp"
                    android:textColor="#000000"

                    />
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#000000"/>

            </LinearLayout>
            <LinearLayout
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:gravity="right"
                    android:layout_weight="3"
                    android:id="@+id/UOM"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:textStyle="normal"
                    android:textSize="20dp"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_weight="1.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/partuom"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#000000"/>

            </LinearLayout>
            <LinearLayout
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">
                <EditText
                    android:gravity="right"
                    android:id="@+id/qty"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginLeft="50dp"
                    android:textStyle="normal"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="number|numberDecimal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qty"
                    android:layout_marginTop="9dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="#000000"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="normal"
                    android:textSize="20dp"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_selector"/>
                <Button
                    android:id="@+id/save"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@drawable/button_selector"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:textStyle="normal"
                    android:textSize="20dp"
                    android:textColor="#ffffff"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>